apps/base/gpupoet/db-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
spec:
  serviceName: db
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          # NOTE: this image is replaced with an images transformer in the overlay
          image: gpupoet-image-db

          resources:
            limits:
              cpu: "0.5"
              memory: "1Gi"
            requests:
              cpu: "0.2"
              memory: "512Mi"

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
    - metadata:
        name: db-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 10Gi
        # volumeName will be patched in overlay for production environments
        # volumeName: gpupoet-prod-db-pv-data
